refactor: improve test readability and structure in query repository tests